force-app/main/default/objects/Shopify_Customer__c/Shopify_Customer__c.object-meta.xml
<CustomObject>
    <label>Shopify Customer</label>
    <nameField>
        <label>Shopify Customer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Shopify Customers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>