force-app/main/default/objects/Shopify_Customer__c/fields/Accepts_Email_Marketing__c.field-meta.xml
<CustomField>
    <fullName>Accepts_Email_Marketing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Accepts Email Marketing</label>
    <type>Checkbox</type>
</CustomField>