force-app/main/default/objects/Shopify_Customer__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Shopify Customers</relationshipLabel>
    <relationshipName>Shopify_Customers</relationshipName>
    <type>Lookup</type>
</CustomField>