force-app/main/default/objects/Shopify_Customer__c/fields/Default_Address_Phone__c.field-meta.xml
<CustomField>
    <fullName>Default_Address_Phone__c</fullName>
    <label>Default Address Phone</label>
    <type>Phone</type>
</CustomField>