force-app/main/default/objects/Shopify_Customer__c/fields/Orders_Spent__c.field-meta.xml
<CustomField>
    <fullName>Orders_Spent__c</fullName>
    <label>Orders Spent</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>