force-app/main/default/objects/Shopify_Customer__c/fields/PrimaryCustomerId__c.field-meta.xml
<CustomField>
    <fullName>PrimaryCustomerId__c</fullName>
    <externalId>true</externalId>
    <label>Primary Customer Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>