force-app/main/default/objects/Shopify_Customer__c/listViews/Shopify_Customers.listView-meta.xml
<ListView>
    <fullName>Shopify_Customers</fullName>
    <columns>NAME</columns>
    <columns>Email__c</columns>
    <columns>Last_Name__c</columns>
    <columns>First_Name__c</columns>
    <columns>Customer__c</columns>
    <filterScope>Mine</filterScope>
    <label>Shopify Customers</label>
</ListView>